# 2022-hw-mini

./: CMakeLists.txt  LICENSE  Mini Project Report.md  README.md  Report.md  assignment.md  pwm_led_sos_2.0.2.c
.github/workflows/: ci.yml
blink/: blink.c
cmake/: pico_sdk_import.cmake
doc/: compiler.md  console.md  pico-sdk.md  trouble.md  upload.md
led_fade/: CMakeLists.txt
modified_code/: CMakeLists.txt
onboard_temperature/: CMakeLists.txt  onboard_temperature.c
scripts/: install_cmake_linux.sh
src/: CMakeLists.txt  README.md
src/adc/adc_console/: CMakeLists.txt
src/adc/hello_adc/: CMakeLists.txt  hello_adc.c
src/adc/onboard_temperature/: CMakeLists.txt
src/blink/: CMakeLists.txt  blink.c
src/hello_usb/: CMakeLists.txt  hello_usb.c
src/pico_w/blink/: CMakeLists.txt  picow_blink.c
src/pico_w/wifi_scan/: CMakeLists.txt  picow_wifi_scan.c
src/pio/addition/: CMakeLists.txt  addition.c
src/pio/pio_blink/: CMakeLists.txt
src/pio/pwm/: CMakeLists.txt  pwm.c
src/pwm/led_fade/: CMakeLists.txt  pwm_led_fade.c
